--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
         <div class="left"><section class="weather section">
             <h2>Weather</h2>
             <ul class="weather-info"></ul>
+            <a class="more" id="weather" href=""><svg class="more-arrow" viewBox="0 0 512 512"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"/></svg></a>
         </section>
         <section class="currency section">
             <h2 class="currency-title">Currency</h2>
             <ul class="currency-info"></ul>
+            <a class="more" id="currency" href=""><svg class="more-arrow" viewBox="0 0 512 512"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"/></svg></a>
         </section></div>
         <section class="holidays section">
             <h2>Holidays</h2>
             <ul class="holiday-info"></ul>
+            <a class="more" id="holiday" href=""><svg class="more-arrow" viewBox="0 0 512 512"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"/></svg></a>
         </section>
     </section>
     <p  class="back hidden"><a class="back-txt" href="">Back to top</a></p>
