--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="search">
         <form>
             <label for="country"><h1>Please enter a country! </h1></label>
-            <input id="country" type="text" name="country" value="china" required>
+            <input id="country" type="text" name="country" placeholder="china" required>
             <button class="submit-btn" type="submit">Submit</button>
         </form>
     </section>
@@ -42,10 +42,10 @@
     <footer class="hidden">
         <p>App By Krissandra Charmant</p>
         <p>Made possible by 
-            <a href="https://restcountries.eu/">RestCountries</a>
-            <a href="https://www.exchangerate-api.com/">ExchangeRate</a>
-            <a href="https://calendarific.com/">Calendarific</a>
-            <a href="https://www.weatherbit.io">Weatherbit</a>
+            <a href="https://restcountries.eu/" target="_blank">RestCountries</a>
+            <a href="https://www.exchangerate-api.com/"  target="_blank">ExchangeRate</a>
+            <a href="https://calendarific.com/"  target="_blank">Calendarific</a>
+            <a href="https://www.weatherbit.io"  target="_blank">Weatherbit</a>
             APIs
         </p>
     </footer>
