better form description

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <section class="search">
         <form>
-            <label for="country"><h1>Please enter a country! </h1></label>
+            <legend><h1>Enter a country below to see information about its demographics, current weather, holidays, and currency!</h1></legend>
+            <label for="country">Full Country Name: </label>
             <input id="country" type="text" name="country" placeholder="china" required>
-            <button class="submit-btn" type="submit">Submit</button>
+            <button class="submit-btn" type="submit">Search!</button>
         </form>
     </section>
 
@@ -44,7 +45,7 @@
         <p>Made possible by 
             <a href="https://restcountries.eu/" target="_blank">RestCountries</a>
             <a href="https://www.exchangerate-api.com/"  target="_blank">ExchangeRate</a>
-            <a href="https://calendarific.com/"  target="_blank">Calendarific</a>
+            <a href="https://calendarific.com/"  target="_blank">Calendarific</a> &
             <a href="https://www.weatherbit.io"  target="_blank">Weatherbit</a>
             APIs
         </p>
