small screen styling

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="description" content="Input a country and learn about it!">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Country Insight</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <section class="search">
         <form>
-            <legend><h1>Enter a country below to see information about its demographics, current weather, holidays, and currency!</h1></legend>
+            <legend><h1 class="instructions">Enter a country below to see information about its current weather, holidays, currency and more!</h1></legend>
             <label for="country">Full Country Name: </label>
-            <input id="country" type="text" name="country" placeholder="china" required>
-            <button class="submit-btn" type="submit">Search!</button>
+            <input id="country" type="text" name="country" placeholder="China" required>
+            <button class="submit-btn" type="submit">Research!</button>
         </form>
     </section>
-
     <section class="results hidden">
         <section class="general section">
             <h2>Country</h2>
@@ -39,12 +39,12 @@
             <a class="more" id="holiday" href=""><svg class="more-arrow" viewBox="0 0 512 512"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9  c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3  z"/></svg></a>
         </section>
     </section>
-    <p  class="back hidden"><a class="back-txt" href="">Back to top</a></p>
+    <p  class="back hidden"><a class="back-txt" href="">&#x21EA; Back to top &#x21EA;</a></p>
     <footer class="hidden">
-        <p>App By Krissandra Charmant</p>
-        <p>Made possible by 
-            <a href="https://restcountries.eu/" target="_blank">RestCountries</a>
-            <a href="https://www.exchangerate-api.com/"  target="_blank">ExchangeRate</a>
+        <p class="author">App By <a href="https://krissy16.github.io/portfolio/" target="_blank">Krissandra Charmant</a></p>
+        <p class="credit">Made possible by 
+            <a href="https://restcountries.eu/" target="_blank">RestCountries</a>, 
+            <a href="https://www.exchangerate-api.com/"  target="_blank">ExchangeRate</a>, 
             <a href="https://calendarific.com/"  target="_blank">Calendarific</a> &
             <a href="https://www.weatherbit.io"  target="_blank">Weatherbit</a>
             APIs
