form legend accessibility fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="search">
         <form>
             <fieldset>
-                <legend><h1 class="instructions">Enter a country below to see information about its current weather, holidays, currency and more!</h1></legend>
+                <legend class="instructions">Enter a country below to see information about its current weather, holidays, currency and more!</legend>
                 <label for="country">Full Country Name: </label>
                 <input id="country" type="text" name="country" placeholder="China" required>
                 <button class="submit-btn" type="submit">Research!</button>
